# rag-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: Agentic_Module.md  Architecture.md  Cache_Module.md  Document_Parsing_Analysis.md  Evaluation_Module.md  Guardrails_Module.md  Knowledge_Base.md  LangGraph_Migration_Plan.md  Memory_Module.md  Optimization_Roadmap.md  PRD.md  Retrieval_Module.md  Technical_Design.md
rag_agent/: __init__.py  agent.py  api.py  config.py  embedder.py  guardrails.py  llm.py  logging_config.py  resilience.py
rag_agent/agentic/: __init__.py  base.py  mcp_client.py  react.py  router.py  self_correction.py  tools.py  web_search_tool.py
rag_agent/cache/: __init__.py  semantic_cache.py
rag_agent/evaluation/: __init__.py  base.py  evaluator.py  metrics.py  report.py  rules.py
rag_agent/graph/: __init__.py  agent.py  graph.py  nodes.py  state.py
rag_agent/knowledge/: __init__.py  base.py  chroma_store.py  chunker.py  kb.py  loader.py  reranker.py  store.py
rag_agent/memory/: __init__.py  extractor.py  long_term.py  medium_term.py  short_term.py
rag_agent/retrieval/: __init__.py  query_transform.py
tests/: __init__.py  conftest.py  test_agent_integration.py  test_chunker.py  test_evaluator.py  test_langgraph.py  test_long_term_memory.py  test_vector_store.py
tests/fixtures/: rag_guide.md
